# MMM

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ACCIDENTAL_GEOX_TRACK_D_PASTE_QUARANTINE.md  BAYES_H2B_VALIDATION_RUNNER_002.md  BAYES_H2B_VALIDATION_WORLDS_001.md  DOCUMENTATION_INVENTORY.md  MIP_PLATFORM_AUDIT_TEMPLATE.md  README.md  ROADMAP_ALIGNMENT_GATE.md  ROADMAP_ALIGNMENT_REGISTRY.md  architecture.md  bayesian.md  best_practices.md  budget_optimization.md  config_yaml.md  cv_modes.md  decision_runbook.md  decision_vs_research.md  dev_setup.md  dev_validation_workflow.md  documentation_truth_audit.md  feature_separability.md  mmm_export_bundle_ingestion_and_answerability.md  operator_runbook.md  overview.md  planning_artifact_schema.md  planning_contract_deliverable.md  planning_execution.md  planning_howto.md  python_api.md  quickstart.md  ridge_bo.md
examples/: benchmark_geo_panel_v1.csv  minimal_train.yaml  planning_scenario_promo.yaml  prod_train_template.yaml  sample_panel.csv  triangulation_geo_panel_v1.csv
mmm/: __init__.py
scripts/: validate_ci_local.sh  validate_docs.py
tests/: __init__.py  conftest.py  decision_payload_scrub.py  prod_extension_fixtures.py  test_artifact_factory.py  test_artifact_lifecycle_e2e.py  test_artifact_tier_enforcement.py  test_artifacts.py  test_baseline_beat_waiver.py  test_bayesian_draw_export.py  test_bayesian_experiment_likelihood.py  test_bayesian_hierarchy.py  test_bayesian_inference_report_smoke.py  test_bayesian_posterior_quantity_artifact.py  test_bayesian_ppc_smoke.py  test_bayesian_pymc_integration.py  test_bo_replay_refit_disclosure.py  test_budget.py  test_calibration_matching.py  test_calibration_readiness.py  test_calibration_units_experiment_meta.py  test_cli_decide_shims.py  (+133 more)
(+955 files in other folders)
